# src/main/java/com/example/productapi/config/AuthenticationRequest.java
@@ -1,0 +1,9 @@
+package com.example.productapi.config;
+
+import lombok.Getter;
+
+@Getter
+public class AuthenticationRequest {
+    private String username;
+    private String password;
+}
