# src/main/resources/openapi.yml
@@ -4,12 +4,33 @@ info:
   description: API for managing products, categories, and statistics
   version: 1.0.0
 paths:
+  /authenticate:
+    post:
+      summary: Authenticate user and get token
+      operationId: authenticateUser
+      tags:
+        - Authentication
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AuthenticationRequest'
+      responses:
+        '200':
+          description: Successful authentication
+          content:
+            application/json:
+              schema:
+                type: string
   /api/products:
     get:
       summary: Get all products
       operationId: getAllProducts
       tags:
         - Product
+      security:
+        - bearerAuth: []
       responses:
         '200':
           description: A list of products
@@ -24,6 +45,8 @@ paths:
       operationId: createProduct
       tags:
         - Product
+      security:
+        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -49,6 +72,8 @@ paths:
           required: true
           schema:
             type: integer
+      security:
+        - bearerAuth: []
       responses:
         '200':
           description: The product with the specified ID
@@ -67,6 +92,8 @@ paths:
           required: true
           schema:
             type: integer
+      security:
+        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -91,6 +118,8 @@ paths:
           required: true
           schema:
             type: integer
+      security:
+        - bearerAuth: []
       responses:
         '204':
           description: No content, product deleted
@@ -100,6 +129,8 @@ paths:
       operationId: getAllCategories
       tags:
         - Category
+      security:
+        - bearerAuth: []
       responses:
         '200':
           description: A list of categories
@@ -114,6 +145,8 @@ paths:
       operationId: createCategory
       tags:
         - Category
+      security:
+        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -133,6 +166,8 @@ paths:
       operationId: getAllStatistics
       tags:
         - Statistics
+      security:
+        - bearerAuth: []
       responses:
         '200':
           description: A list of statistics
@@ -144,6 +179,13 @@ paths:
                   $ref: '#/components/schemas/StatisticsResponse'
 components:
   schemas:
+    AuthenticationRequest:
+      type: object
+      properties:
+        username:
+          type: string
+        password:
+          type: string
     ProductRequest:
       type: object
       properties:
@@ -195,3 +237,8 @@ components:
           type: integer
         category:
           type: string
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
